<resources>
    <string name="app_name">Poll</string>
    <string name="title_activity_poll">PollActivity</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="Hide">Hide</string>
    <string name="txt_about">Ballot Box was made by Andy and Isaac</string>
    <string name="PleaseSelectAnAnswer">Please select an answer</string>
    <string name="FieldCannotBeEmpty">Field cannot be empty</string>
    <string name="PostCreated">Post created</string>
    <string name="RegistrationOK">Registration ok</string>
    <string name="AuthenticationFailed">Authentication failed. Error:</string>
    <string name="EmailCannotBeEmpty">The email can not be empty</string>
    <string name="PasswordCannotBeEmpty">The password can not be empty</string>
    <string name="HoldOn">Hold On...</string>
    <string name="Error">Error:</string>
    <string name="view_results">View Results</string>
    <string name="question">Question</string>
    <string name="answer_1">Answer 1</string>
    <string name="answer_2">Answer 2</string>
    <string name="answer_3">Answer 3</string>
    <string name="answer_4">Answer 4</string>
    <string name="ask">Ask</string>
    <string name="answer">Answer</string>
    <string name="author">Author</string>
    <string name="login_image">Login Image</string>
    <string name="ballot_box">Ballot Box</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="question_title_default">QUESTION TITLE</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="four">four</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="answers_graph">Answers Graph</string>
    <string name="question">Question</string>
    <string name="answer">Answer</string>
    <string name="author">Author</string>
    <string name="delete">Delete</string>
</resources>
