<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_write_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/question"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etAnswer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/answer_1"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etAnswer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/answer_2"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etAnswer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/answer_3"
        android:maxLines="1" />

    <EditText
        android:id="@+id/etAnswer4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/answer_4"
        android:maxLines="1" />

    <Button
        android:id="@+id/btnAsk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ask"/>

</LinearLayout>