<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:orientation="vertical"
                android:layout_alignParentStart="true">

                <TextView
                    android:id="@+id/tvQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:text="@string/question"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:paddingStart="6dp" />



                <Button
                    android:id="@+id/btnSubmitAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvAuthor"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textSize="15sp"
                android:paddingRight="6dp"
                android:paddingLeft="6dp"
                android:layout_alignParentEnd="true"
                android:paddingEnd="6dp"
                tools:ignore="RelativeOverlap" />

    </RelativeLayout>


</android.support.v7.widget.CardView>