<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_margin="10dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/tvQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:paddingRight="6dp"
                android:text="@string/question"
                android:textSize="24sp"
                android:textStyle="bold"
                android:paddingStart="6dp" />

            <RadioGroup
                android:id="@+id/radioAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:paddingStart="4dp">

                <RadioButton
                    android:id="@+id/radioAnswer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/radioAnswer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/radioAnswer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <RadioButton
                    android:id="@+id/radioAnswer4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RadioGroup>

            <Button
                android:id="@+id/btnSubmitAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingRight="6dp"
            android:paddingLeft="6dp"
            android:text="@string/author"
            android:textSize="15sp"
            android:layout_alignParentEnd="true"
            android:paddingEnd="6dp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>


</LinearLayout>